# stock_analysis

./: .env.example  Cargo.toml  README.md
src/: calculations.rs  error.rs  fmp.rs  main.rs  models.rs  route_tests.rs  sectors.rs  state.rs
src/routes/: mod.rs  screener.rs  stock.rs
